# Priority

./: .gitignore  BUILD-GUIDE-WINDOWS.md  Pending Fixes.md  README.md  WEBVIEW-GUIDE-WINDOWS.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
.claude/: settings.local.json
.claude/agents/: tuari-builder.md
src/: App.tsx  constants.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: DraggableArchivedTask.tsx  DraggableTask.tsx  DraggableWorkspace.tsx
src/utils/: storage.ts
